--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,13 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="/actionbarsherlock"/>
+	<classpathentry kind="lib" path="C:/Users/Oleg/Desktop/adt-bundle-windows-x86_64-20131030/sdk/platforms/android-19/android.jar" sourcepath="C:/Users/Oleg/Desktop/adt-bundle-windows-x86_64-20131030/sdk/sources/android-19">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/Oleg/Desktop/adt-bundle-windows-x86_64-20131030/sdk/docs/reference"/>
+		</attributes>
+		<accessrules>
+			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
